--- a/resources/CSS/formchamado.css
+++ b/resources/CSS/formchamado.css
@@ -3,7 +3,6 @@ input[type=text] {
     top: auto;
 }
 
-<<<<<<< HEAD
 #nome {
     left: center;
     top: auto;
@@ -11,9 +10,6 @@ input[type=text] {
     border: none;
     text-align: center;
 }
-=======
-
->>>>>>> 2e6dae0fbf8154be73d928211694c65bc7f4785e
 
 input {
     position: relative;
@@ -51,13 +47,13 @@ h1 {
 
 body {
     background-color:white;
-<<<<<<< HEAD
 }
 
 label{
     position: relative;
     left: 40%;
 }
-=======
+select{
+    position: relative;
+    width: 100%;
 }
->>>>>>> 2e6dae0fbf8154be73d928211694c65bc7f4785e
